# kipart_search

./: .gitignore  CHANGELOG.md  CLAUDE.md  CROSS_PLATFORM_UPDATE.md  README.md  build_nuitka.py  clear_release.py  pyproject.toml  release.py  smoke_test_epic8.py
.claude/: settings.local.json
.github/workflows/: build-release.yml  build-windows.yml
ExistingWorksOn/: Sample-BOM-With-Supplier-Part-Number-Example-V2.xlsx  Sample-BOM-With-Supplier-Part-Number-Example.xlsx  compass_artifact_wf-af099856-fd25-4fc1-bcd0-66648f118144_text_markdown.md  kicad_api_symbol_fields.md
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-14-1730.md  brainstorming-session-2026-03-25-1400.md
_bmad-output/implementation-artifacts/: 1-1-migrate-main-window-to-qdockwidget-panel-architecture.md  1-2-toolbar-status-bar-and-view-menu.md  1-3-detail-panel-for-part-inspection.md  1-4-layout-persistence-and-empty-states.md  1-5-context-menus-and-accessibility-labels.md  1-6-persistent-session-log.md  2-1-bom-export-engine-with-pcbway-template.md  2-2-preset-cm-templates-jlcpcb-newbury-electronics.md  2-3-health-summary-bar-with-live-updates.md  2-4-bom-export-dialog-with-template-selection-and-preview.md  3-1-dynamic-filter-row.md  3-2-two-mode-search-architecture-specific-vs-unified.md  7-5-ci-build-pipeline.md  (+44 more)
docs/: architecture.md  component-inventory.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  testing-pyside6.md
experiments/: mouser_explore.py
installer/: kipart-search.iss
tests/: clear_update_cache.ps1  conftest.py  smoke_test_build.py  smoke_test_epic8.py  smoke_test_writeback.py  test_build_nuitka.py  test_context_menus.py  test_detail_panel.py  test_empty_states.py  test_export_dialog.py  test_filter_row.py  test_health_bar.py  test_license.py  test_log_panel.py  test_main_window_docks.py  test_project_state.py  test_release.py  test_smoke_test_build.py  test_stale_data_indicators.py  test_two_mode_search.py  test_user_verification_status.py  test_verify_dashboard_enhancements.py
(+92 files in other folders)
